--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>GitHub Actions wow</title>
 </head>
 <body>
-    <h1>Hello, GitHub Actionszzzzasdsadssadasddzz!</h1>
+    <h1>Hello, GitHub hello!</h1>
 </body>
 </html>
